--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,6 +1,7 @@
 .footer{
-  background-color: skyblue;
+  background-color: #1d243b;;
   margin-bottom: 0;
+  color: white;
 }
 .footer-info{
   color: white;
